--- a/CSS/beetle-shop.css
+++ b/CSS/beetle-shop.css
@@ -49,8 +49,11 @@ button{
 }
 
 .search i{
-    margin-right: 10px;
-    
+    margin-right: 10px;    
+}
+
+.search i:hover{
+    transform: scale(1.5);
 }
 
 .search input{
@@ -104,7 +107,7 @@ button{
     text-shadow: 4px 4px 12px;
 }
 
-.l-list li:first-child::before{
+/* .l-list li:first-child::before{
     content: "";
     background-image: url(../img/img-beetle-shop/icons_beetle.svg);
     width: 17px;
@@ -113,7 +116,7 @@ button{
     position: absolute;
     right: 0;
     bottom: 10px;
-}
+} */
 
 .l-list li:hover{
     font-weight: bold;
@@ -168,6 +171,7 @@ button{
     position: absolute;
     right: 0;
     bottom: 115px;
+    z-index: 500;
 }
 
 .main-product li:nth-child(4)::before{
@@ -183,6 +187,7 @@ button{
     position: absolute;
     right: 0;
     bottom: 135px;
+    z-index: 500;
 }
    
 
@@ -200,7 +205,27 @@ button{
 
 .main-product img{
     width: 100%;
-    height: 100%;
+}
+
+/* 售完標籤 */
+.main-product li:not(li:nth-child(5)):after{
+    content: "售完";
+    font-weight: bold;
+    font-size: 30px;
+    display: block;
+    width: 100%;
+    height: 50px;
+    color: white;
+    background-color: rgb(255,0,0,0.4);
+    text-align: center;
+    line-height: 50px;
+
+    position: absolute;
+    top: 0;
+    bottom:0;
+    margin: auto;
+
+    z-index: 800;
 }
 
 .main-product h3{
