--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -1,5 +1,9 @@
 @import url(./reset.css);
 
+body{
+    font-size: 16px;
+}
+
 /* -------------頂端黏著header------------- */
 .wrapper{
     position: sticky;
