--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -128,6 +128,7 @@ body{
     line-height: 30px;
     border-radius: 20px;
     box-shadow: 5px 4px 4px black;
+    font-size: 16px;
 }
 
 .user-action a:hover{
