--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -128,7 +128,8 @@ body{
     line-height: 30px;
     border-radius: 20px;
     box-shadow: 5px 4px 4px black;
-    font-size: 16px;
+    font-size: clamp(14px, 1.6vw, 16px);
+
 }
 
 .user-action a:hover{
