--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -18,21 +18,21 @@ body{
 .header1{
     background-color: #4D606E;
     display: flex;
-    height: 25px;    
+    height: 30px;   
 
     padding: 0 80px;   
 }
 
 .header1 p{
     color: white;
-    line-height: 25px;
+    line-height: 30px;
     margin: 0 auto;
     word-spacing: 5px;
     padding-left: 150px;
 }
 
 .social-link{
-    line-height: 25px;   
+    line-height: 30px;   
 }
 
 .social-link a{
@@ -42,7 +42,7 @@ body{
 }
 
 .header1 .fa-brands{
-    color: #000000;
+    color: white;
 }
 
 .header2{
@@ -51,13 +51,13 @@ body{
     align-items: center;
     padding: 0 40px;
     margin-bottom: 30px;
-    height: 100px;
+    height: 80px;
      
     border-radius: 0 0 10px 10px;    
 }
 
 .header2 img{
-    height: 90px;
+    height: 70px;
 }
 
 .header2 ul{
@@ -127,7 +127,7 @@ body{
     text-align: center;
     line-height: 30px;
     border-radius: 20px;
-    box-shadow: 5px 4px 4px black;
+    box-shadow: 5px 4px 4px rgb(0, 0, 0,.5);
     font-size: clamp(14px, 1.6vw, 16px);
 
 }
@@ -136,6 +136,7 @@ body{
     color: white;
     background-color: #4A654A;
     box-shadow: none;
+    box-shadow: 5px 4px 4px rgb(0, 0, 0,.5);
 }
 
 .user-action a:last-child{
