--- a/CSS/beetle-lab.css
+++ b/CSS/beetle-lab.css
@@ -160,20 +160,32 @@ body{
     text-decoration: none;
     color: black;
     font-weight: bold;
+    width: 545px;
+
+    padding: 10px;
+    box-sizing: border-box;
+
 }
 
-/* .main-content h1{} */
+.main-content a:hover{
+    box-shadow: 0 0 4px rgb(0,0,0,.6);
+}
+
+.main-content h1{
+    font-size: 20px;
+}
 
 .main-content h2{
     color: #7F7C7C;
+    font-size: 10px;
 
-    margin: 15px 0;
+    margin-top: 15px;
 }
 
 .main-content p{
     display: block;
     font-weight: normal;
-    width: 545px;
+    /* width: 545px; */
 
     line-height: calc(1.5em*2); /*行高1.5倍的兩行*/
     position: relative;
@@ -186,7 +198,6 @@ body{
     position: absolute;
     right: 40px;
     bottom: 0;
-    margin: auto;
 }
 
 .main-content img{
