--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -1,5 +1,9 @@
 @import url(./reset.css);
 
+html{
+    background: linear-gradient(180deg,#4A654A 0%,#68F0BD 50%,#5D7C71 100%);
+}
+
 body{
     font-size: 16px;
 }
