--- a/CSS/beetle-product.css
+++ b/CSS/beetle-product.css
@@ -1,15 +1,8 @@
-body{
-    width: 100%;
-    max-width: 1200px;
-    min-width: 1100px;
-    margin: 0 auto;
-    background-color: #F1FBF2;    
-    font-family: "Noto Sans TC", serif;
-}
+
 
 a{
     text-decoration: none;
-    color: black;
+    color: #FFFF;
 
 }
 
@@ -24,14 +17,14 @@ a{
 }
 
 .breadcrumb li{
-    color: black;
+    color: #FFFF;
     font-weight: bold;
 }
 
 .search{
     display: flex;
     justify-content: flex-end;
-    margin-right: 45px;
+    margin-right: 125px;
 }
 
 button{
@@ -56,6 +49,11 @@ button{
 
     box-shadow: inset 0 4px 4px rgb(0,0,0,.3);
 }
+
+.search i{
+    color: #FFFF;
+}
+
 .shell-top{
     display: flex;
     justify-content: flex-start;
@@ -78,7 +76,7 @@ button{
 /* .l-list ul{} */
 
 .l-list li{
-   border-bottom: 1px solid #7F7C7C;
+   border-bottom: 1px solid #FFFF;
    position: relative;   
 }
 
@@ -86,26 +84,15 @@ button{
     border: none;
 }
 
-.l-list li:first-child{
+.l-list li:first-child a{
     font-weight: bold;
-    text-shadow: 4px 4px 12px;
-}
-
-.l-list li:first-child::before{
-    content: "";
-    background-image: url(../img/img-beetle-shop/icons_beetle.svg);
-    width: 17px;
-    height: 17px;
-
-    position: absolute;
-    right: 0;
-    bottom: 10px;
+    color: #2b3632;
 }
 
 
-.l-list li:hover{
+.l-list a:hover{
     font-weight: bold;
-    text-shadow: 4px 4px 12px;
+    color: #2b3632;
 }
 
 .l-list li:hover::before{
@@ -144,7 +131,7 @@ button{
 .product-info{
     width: 316px;
     height: 577px;
-    background-color: white;
+    background-color: #FFFF;
     padding: 20px 10px 40px;
     box-sizing: border-box;  
 
@@ -152,7 +139,9 @@ button{
 }
 
 .product-info h1,.product-info h3{
+    color: #161d1b;
     text-align: center;
+    font-weight: bold;
 }
 
 .product-info h1{
@@ -170,7 +159,7 @@ button{
     line-height: 40px;
     padding-left: 30px;
     margin-bottom: 60px;
-    background-color: #D9D9D9; 
+    background-color: #5d7c71; 
      
 }
 
@@ -178,12 +167,15 @@ button{
 
 .product-info li{
     margin-bottom: 20px;
+    color:#161d1b;
 }
 
 .product-info>p{
     text-indent:2em;
     line-height: 1.6;
     padding-right: 20px;
+
+    color: #161d1b;
 }
 
 .product-info p~p{
@@ -195,11 +187,13 @@ button{
 .about-buy{
     width: 100%;
     height: 157px;
-    background-color: #8DE7B1;
+    background-color: #bfd0c9;
     display: flex;
     justify-content: space-around;
     align-items: center;
     grid-column: span 2;
+
+    color: #161d1b;
 }
 
 /* .size{} */
@@ -212,20 +206,20 @@ button{
 }
 
 .buy a{
+    color: #FFFF;
     display: inline-block;
     width: 150px;
     height: 55px;
     line-height: 55px;
     text-align: center;
-    background-color: #FFF4E0;
+    background-color: #5d7c71;
     border-radius: 50px;
 
     margin-right: 30px;
 }
 
 .buy a:hover{
-    background-color: #5D7C71;
-    color: white;
+    background-color: #455c54;
 }
 
 /* 中層相關商品 */
@@ -316,7 +310,8 @@ button{
 .buttom-shell li{
     width: 300px;
     height: 200px;
-    background-color: #FFF4E0;
+    background-color: #2b3632;
+    border-radius: 10px;
 
     position: relative;
 }
@@ -338,7 +333,7 @@ button{
 }
 
 .buttom-shell span{
-    color: #9C9C9C;
+    color: #98b0a7;
 }
 
 .buttom-shell li::before{
@@ -346,7 +341,7 @@ button{
     display: block;
     height: 175px;
     width: 0;
-    border: 1px solid #D1CFCF;
+    border: 1px solid #bfd0c9;
 
     position: absolute;
     right: -20px;
@@ -361,7 +356,8 @@ button{
     display: block;
     width: 250px;
     height: 150px;
-    border: 5px solid white;
+    border: 5px solid #5d7c71;
+    border-radius: 10px;
 
     position: absolute;
     top: 0;
