--- a/CSS/news.css
+++ b/CSS/news.css
@@ -1,23 +1,5 @@
-body{
-    width: 100%;
-    max-width: 1200px;
-    min-width: 1200px;
-    margin: 0 auto;
-    background-color:  #F1FBF2;
-    font-family: "Noto Sans TC", serif;
-}
 
-.hero-img{
-    background-image: url(../img/image-news/hero-bgi.png);
-    width: 1150px;
-    height: 500px;
-    background-size: cover;
 
-    margin: 0 auto;
-    
-    position: relative;
-    
-}
 /* .tags{} */
 
 .tags ul{
@@ -32,76 +14,69 @@ body{
     height: 45px;
     line-height: 45px;
     text-align: center;
-    border: 1px solid black;
    
     border-radius: 5px;
 }
 
-/* 點擊全部消息時 其他tags變成灰色 */
-.all-news:active ~li{
-    background-color: grey;
-}
-
-.tags ul li:first-child{
-    background-color: #F7F25B;
+/* 過濾選單按鈕 */
+.tags ul li{    
     cursor: pointer;
 }
 
-.notice{
-    background-color: #EF6C57;
+.tags ul li:first-child{
+    background-color:#5d7c71;
+    color: #FFFF;
+    border: 1px solid #FFFF;
 }
 
-.even{
-    background-color: #FCCF5B;
-}
-
-.breeding-info{
-    background-color: #8BC34A;
+.tags ul li:not(:first-child){
+    background-color: #dfe8e4;
+    color: #728f85;
 }
 
 .news-list{
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
+    color: #161d1b;
+    width: 1110px;
+    margin: 0 auto 100px;
 }
 
 .news-list ul{
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    gap: 60px;
+    gap: 30px;
 
-    padding-left: 30px;
+    margin-left: 30px;
 }
 
 .news-list li{
-    background-color: #FFF4E0;
+    background-color: #FFFF;
     width: 340px;
-    height: 500px;
+    border-radius: 10px;
+    padding: 30px;
+    box-sizing: border-box
 }
 
 .news-list img{
     display: block;
-    width: 320px;
-    height: 250px;
-    margin: 10px;
-    
-}
-
-.news-list h3{
-    width: 100px;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    margin: 20px auto 30px;
+    width: 100%;
+    height: 220px;
+    border-radius: 5px;    
 }
 
 .news-list p{
     text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0;
 }
 
 .news-list span{
     display: block;
-    text-align: center;
-    padding: 20px 65px 20px;
+    text-align: left;
     line-height: 20px;
 }
 
@@ -114,6 +89,7 @@ body{
     overflow: hidden;
     position: relative;
     margin: 0 auto;
+    border-radius: 10px;
 }
 
 /* Slider */
@@ -221,10 +197,11 @@ body{
     display: block;
     width: auto;
     height: 30px;
-    border: 1px solid black;
-    color: white;
+    color: #FFFF;
     font-size: 30px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(69, 92, 84, 0.6);
+    border-radius: 10px;
+    font-weight: bold;
     padding: 10px;
     
     position: absolute;
