--- a/CSS/shopping-cart.css
+++ b/CSS/shopping-cart.css
@@ -1,15 +1,7 @@
-body{
-    width: 100%;
-    max-width: 1200px;
-    min-width: 1100px;
-    margin: 0 auto;
-    background-color: #F1FBF2;
-    font-family: "Noto Sans TC", serif;
-}
-
 .content{
     width: 1150px;
     margin: 0 auto 80px;
+    color:#FFFF;
 }
 
 /* .checkout-progress{} */
@@ -25,7 +17,7 @@ body{
 }
 
 .checkout-progress li:nth-child(3),.checkout-progress li:nth-child(5){
-    color: #9C9C9C;
+    color: #98b0a7;
 }
 
 /* .cart-detail{} */
@@ -56,14 +48,14 @@ body{
 .cart{
     display: flex;
     justify-content: space-between;
+    color: #161d1b;    
 }
     
 
 .l-cart{
-    background-color: white;
-    border-top: 4px solid #EFEFEF;
-    border-right: 4px solid #EFEFEF;
-    width: 50%;
+    background-color: #FFFF;
+    border-top: 4px solid #bfd0c9;
+    border-right: 4px solid #bfd0c9
 }
 
 .product-detail{
@@ -108,24 +100,29 @@ label{
     font-size: 12px;
     text-align: center;
     line-height: 20px;
-    color: black;
-    background-color: #75F068;
+    color: #dfe8e4;
+    background-color: #5d7c71;
     border-radius: 10px;
 
     margin: 60px auto 0;
 }
 
+.l-cart a:hover{
+    color: #dfe8e4;
+    background-color: #394c45;
+}
+
 .r-cart{
-    background-color: white;
-    border-top: 4px solid #EFEFEF;
+    background-color: #FFFF;
+    border-top: 4px solid #bfd0c9;
     width: 50%;
 
     padding: 45px 30px 30px;
 }
 
 .how-to-ship{
-    border-top: 2px solid #EFEFEF;
-    border-bottom: 2px solid #EFEFEF;
+    border-top: 2px solid #bfd0c9;
+    border-bottom: 2px solid #bfd0c9;
     padding: 10px 10px 60px;
 }
 
@@ -140,7 +137,7 @@ label{
 }
 
 .total{
-    border-bottom:2px solid #EFEFEF;;
+    border-bottom:2px solid #bfd0c9;
     text-align: right;
     margin-top: 10px;
 }
@@ -161,16 +158,15 @@ label{
     font-size: 20px;
     text-align: center;
     line-height: 30px;
-    color: black;
-    background-color: #75F068;
+    color: #dfe8e4;
+    background-color: #5d7c71;
     border-radius: 10px;
-    box-shadow: 5px 4px 4px black;
+    box-shadow: 5px 4px 4px rgb(0, 0, 0,.5);
 
     margin: 60px auto 0;}
 
 .r-cart a:hover{
-    color: white;
-    background-color: #4A654A;
-    box-shadow: none;
+    color: #dfe8e4;
+    background-color: #394c45;
 }
 
