--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,3 @@
-body{
-    width: 100vw;
-    max-width: 1200px;
-    min-width: 1100px;
-    margin: 0 auto;
-    background: linear-gradient(180deg,#4A654A 0%,#68F0BD 50%,#5D7C71 100%);
-    font-family: "Noto Sans TC", serif;
-}
-
 /* img全部加上圓角 */
 img{
     border-radius: 10px;
@@ -15,7 +6,6 @@ img{
 
 .main-title{
     display: flex;
-    color: white;
     justify-content: space-between;
 
     margin-bottom: 10px;
@@ -24,7 +14,7 @@ img{
 .title-left h1{
     font-size: 60px;
     font-weight: bold;
-    margin-left: 25px;
+    margin-left: 40px;
     margin-bottom: 10px;
 
 }
@@ -38,13 +28,15 @@ img{
 .main-title p{    
     text-align: right;
     line-height: 40px;
+    margin-right: 40px;
 }
 
 .main-pic{
     width: 1200px;
     height: auto;
-    box-shadow: 0 4px 4px 0 #000000;
-    border-radius: 10px; /*外部容器變圓角*/    
+    box-shadow: 0 4px 4px 0 #455c54;
+    border-radius: 10px; /*外部容器變圓角*/   
+    margin: 0 auto; 
 
     display: flex;
 }
@@ -93,27 +85,29 @@ img{
     margin: 60px auto;
     padding: 0 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;    
 }
 
 .main-content h1, .main-content h2{
     writing-mode: vertical-lr;
     text-align: center;
-    font-weight: bold;
+    font-weight: bold;    
 }
 
 .main-content h1{    
     font-size: 96px;
     letter-spacing: 30px;
     position:relative;
+
+    padding-right: 20px;
 }
 /* 標題文字底層設計框 */
 .main-content h1::before{
-    content: " ";
+    content: "";
     display: block;
     width: 80px;
     height: 400px;
-    background-color: #D9D9D9;
+    background-color: #455c54;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -126,9 +120,8 @@ img{
 .main-content h2{
     font-size: 30px;
     letter-spacing: 5px;
-    word-spacing: 5px; 
-    padding-right: 40px;
-    overflow: hidden;     
+    word-spacing: 5px;  
+    padding-right: 200px;
 }
 
 /* .main-content ul{} */
@@ -142,6 +135,7 @@ img{
     margin: 15px 0;
     font-weight: bold; 
     text-decoration: none;
+    color: #dfe8e4
 }
 /* trans作為容器使img可以隱藏超出容器的部分 */
 .trans{
@@ -169,7 +163,6 @@ img{
 }
 
 .main-content ul li span{
-    color: #000000;
     text-align: center;
 }
 
@@ -181,6 +174,7 @@ img{
 
 .main-extra ul{
     display: flex;
+    margin-left: 60px;
 }
 
 .main-extra li{
@@ -221,7 +215,6 @@ img{
 }
 
 .main-extra span{
-    color: white;
     font-size: 28px;
 
     margin-top: 10px;
