--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -59,7 +59,7 @@ body{
 } */
 
 .header2{
-    background: linear-gradient(to right, #98b0a7,#fff); 
+    background: linear-gradient(to right, #98b0a7,#f5f8f6); 
     display: flex;
     align-items: center;
     padding: 0 40px;
@@ -129,7 +129,7 @@ body{
 /* .user-action{} */
 
 .user-action a{
-    color: #dfe8e4;
+    color: #fff;
     font-weight: bold;
     display: inline-block;
     width: 80px;
