--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -1,16 +1,31 @@
     @import url(./reset.css);
 
-/* html{
-    background: linear-gradient(180deg,#4A654A 0%,#68F0BD 50%,#5D7C71 100%);
-} */
 body{
-    width: 100vw;
-    min-width: 1100px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     background-color: #5d7c71;
     font-family: "Noto Sans TC", serif;
     color: #dfe8e4;
     font-size: 16px;
+
+    position: relative;
+}
+
+/* RWD 覆蓋主畫面透明層 */
+body::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0,.5);
+    z-index: 999;
+
+    display: none;
 }
 
 
@@ -21,42 +36,11 @@ body{
     z-index: 1000;
     width: 100%;
     max-width: 1200px;
-    min-width: 1100px;   
     margin: 0 auto;
     opacity: 1;
 
     color: #2b3632;
 }
-
-/* .header1{
-    background-color: #161d1b;
-    display: flex;
-    height: 30px;   
-
-    padding: 0 80px;   
-}
-
-.header1 p{
-    color: white;
-    line-height: 30px;
-    margin: 0 auto;
-    word-spacing: 5px;
-    padding-left: 150px;
-}
-
-.social-link{
-    line-height: 30px;   
-}
-
-.social-link a{
-    display: inline-block;
-    margin-left: 20px;;
-    text-decoration: none;    
-}
-
-.header1 .fa-brands{
-    color: white;
-} */
 
 .header2{
     background: linear-gradient(to right, #98b0a7,#f5f8f6); 
@@ -76,9 +60,6 @@ body{
 .header2 ul{
     display: flex;
     margin: 0 auto;
-
-    padding-left: 70px;
-    /* 購物車左推40 + 會員登入本身30 */
 }
 
 .header2 li{    
@@ -126,7 +107,9 @@ body{
     margin: auto;
 }
 
-/* .user-action{} */
+.user-action{
+    text-align: center;
+}
 
 .user-action a{
     color: #fff;
@@ -169,10 +152,7 @@ body{
     padding: 0 40px;
     margin: 0 auto;
     box-sizing: border-box;
-
     width: 100%;
-    /* max-width: 1200px; */
-    min-width: 1100px;
 }
 
 .footer p{
@@ -203,7 +183,6 @@ body{
     color: white;
 }
 
-/* header與footer共用hover  原因待詢問*/
 .fa-instagram:hover{
     color: #FBFF25;
 }
@@ -214,4 +193,138 @@ body{
     color: #0866FF;
 }
 
+/* RWD 預先設置骨架 */
+
+.header-rwd1{
+    background: linear-gradient(to right, #98b0a7,#f5f8f6); 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+
+    padding: 0 10px;
+    box-sizing: border-box;
+
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+
+    margin-bottom: 20px;
+
+    display: none;
+}
+
+.hamburger{
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+}
+
+.bar{
+    width: 27px;
+    height: 3px;
+    border-radius: 10px;
+    background-color: #161d1b;
+
+}
+
+#rwd-box{
+    background: linear-gradient(to right, #98b0a7,#f5f8f6); 
+    position: absolute;
+    top: 100px;
+    left: -60%;
+    width: 60%;
+    /* height: 100vh; */
+}
+
+.rwd-list{}
+
+.rwd-translate{
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 80px;
+
+    height: 80px;
+    padding-left: 30px;
+    box-sizing: border-box;
+
+    position: relative;
+}
+
+.rwd-translate::before{
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #161d1b;
+
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.rwd-translate a{
+    text-decoration: none;
+    color: #161d1b;
+}
+
+.rwd-logo{
+    border-radius: 0;
+    width: 90px;
+}
+
+.rwd-cart{
+    display: block;
+    background-color: #5d7c71;
+    color: white;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    line-height: 42px;
+    text-align: center;
+}
+
+/* ---------------------1000px--------------------- */
+@media (width <= 1000px){
+
+.user-action a:last-child{
+    margin-left: 10px;
+}
+
+.header2 ul {
+ font-size: 12px;
+}
+
+}
+
+/* ------------------------820px------------------- */
+@media (width <= 830px){
+
+.wrapper{
+        display: none;
+}
+body{
+    width: 100%;
+}
+
+.header-rwd1{
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+}
 
