--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ img{
 }
 
 .main-pic{
-    width: 1200px;
+    width: 100%;
     height: auto;
     box-shadow: 0 4px 4px 0 #455c54;
     border-radius: 10px; /*外部容器變圓角*/   
@@ -83,26 +83,32 @@ img{
 /* ------------首頁第二部分------------ */
 .main-content{
     margin: 60px auto;
-    padding: 0 80px;
     display: flex;
-    justify-content: space-between;    
+    justify-content: flex-end;
+    gap: 50px;    
 }
 
-.main-content h1, .main-content h2{
+.content-title{
+    display: flex;
+
+    margin: 0 auto;
+}
+
+.content-title h1, .content-title h2{
     writing-mode: vertical-lr;
     text-align: center;
     font-weight: bold;    
 }
 
-.main-content h1{    
-    font-size: 96px;
+.content-title h1{    
+    font-size: 80px;
     letter-spacing: 30px;
     position:relative;
 
-    padding-right: 20px;
+    margin-right: 30px;
 }
 /* 標題文字底層設計框 */
-.main-content h1::before{
+.content-title h1::before{
     content: "";
     display: block;
     width: 80px;
@@ -117,17 +123,17 @@ img{
     z-index: -1;
 }
 
-.main-content h2{
+.content-title h2{
     font-size: 30px;
     letter-spacing: 5px;
-    word-spacing: 5px;  
-    padding-right: 200px;
+    word-spacing: 5px;
 }
 
-/* .main-content ul{} */
+.main-content ul{}
 
 .main-content ul li{
-    margin-bottom: 30px;    
+    margin-bottom: 30px;
+    width: 350px;  
 }
 
 .main-content a{
@@ -169,12 +175,12 @@ img{
 /* ------------首頁第三部分------------ */
 .main-extra{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
 }
 
 .main-extra ul{
     display: flex;
-    margin-left: 60px;
+    gap: 10px;
 }
 
 .main-extra li{
@@ -182,7 +188,6 @@ img{
     flex-direction: column;
     align-items: center;
     
-    margin-right: 30px;
     margin-bottom: 20px;
 
     position: relative;
@@ -205,7 +210,7 @@ img{
 }    
 
 .main-extra img{
-    height: 300px;
+    width: 100%;
     opacity: 0.5;
     transition: opacity .3s;       
 }
@@ -220,40 +225,159 @@ img{
     margin-top: 10px;
 }
 
+.extra-title{
+    display: flex;
+}
+
 /* h1,h2垂直顯示 */
-.main-extra h1, .main-extra h2{
+.extra-title h1, .extra-title h2{
     writing-mode: vertical-lr;
     text-align: center;
     font-weight: bold;
 }
 
-.main-extra h1{
+.extra-title h1{
     font-size: 40px;
-    text-align: center;
-    flex-grow: 1;
-    padding: 0 0 50px 40px;
+    text-align: center; 
     letter-spacing: 3px;
+    margin: 0 40px 80px 0;
     
     position:relative;
 }
 /* h1加上偽元素"2025"  並取消父元素帶來的垂直效果*/
-.main-extra h1::before{
+.extra-title h1::before{
     content: "2025";
     display: block;
     font-size: 40px;
     writing-mode: horizontal-tb;
 
     position:absolute;
-    top: -30px;
-    right: 0;
-    left: 0;
+    top: -45px;
+    left: -25px;
+}
+
+.extra-title h2{
+    font-size: 20px;
+    letter-spacing:5px
+}
+
+
+/* 830px */
+@media (width <= 830px){
+    
+.main-title p{
+    font-size: 12px;
+}
+
+.content-title h2 {
+    padding-right: 50px;
+    box-sizing: border-box;
+}
+
+.title-left{
+    padding: 10px 0 0;
+    box-sizing: border-box;
+}
+
+.title-left h1{
+    font-size: 32px;    
+}
+
+.title-left h2, .title-left p{
+    font-size: 10px;
+}
+
+.main-pic{
+    width: 100%;
+}
+
+.item1, .item2{
+    display: none;
+}
+
+.item3{
+    width: 800px;
+    background-image: url(../img/image-index/main-rwd.png);
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.main-pic li:hover{
+    filter: brightness(100%);
+}
+
+.main-pic li:nth-child(3){
+    border-radius: 10px;
+}
+
+.main-content{
+    margin: 30px auto;
+    flex-direction: column;
+    gap: 0;
+}
+
+.content-title{
+    display: block;
+}
+
+.content-title h1{
     margin: 0;
 }
 
-.main-extra h2{
-    font-size: 20px;
-    letter-spacing:5px;
-    word-spacing: 5px;
-    padding-top: 20px; 
-    flex-grow: 2;
+.content-title h1,.content-title h2{
+    writing-mode: horizontal-tb;
+    padding: 0;
+}
+
+.content-title h1::before{
+    width: 400px;
+    height: 80px;
+}
+
+.content-title h2{
+    margin: 30px 0;
+}
+
+.main-content li{
+    margin: 0 auto;
+}
+
+.main-content a{
+    display: block;
+    width: 350px;
+    margin: 0 auto;
+}
+
+.main-extra{
+    flex-direction: column-reverse;
+}
+
+.extra-title{
+    flex-direction: column;
+    
+}
+
+.extra-title h1, .extra-title h2{
+    writing-mode:horizontal-tb;
+    margin: 0;
+}
+
+.extra-title h1::before{
+    position:static;
+    padding-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.extra-title h2{
+    margin: 20px 0;
+}
+
+.main-extra ul{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 80px;
+}
+
+
+
 }
