--- a/CSS/style.css
+++ b/CSS/style.css
@@ -262,8 +262,8 @@ img{
 }
 
 
-/* 830px */
-@media (width <= 830px){
+/* ------------------------820px----------------------- */
+@media (width <= 820px){
     
 .main-title p{
     font-size: 12px;
@@ -376,6 +376,59 @@ img{
     flex-wrap: wrap;
     justify-content: center;
     gap: 80px;
+}
+
+}
+/* ------------------------390px----------------------- */
+@media (width <= 430px){
+
+.main-title{
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-left h1{
+    font-size: 30px;
+    margin: 0;
+}
+
+.title-left h2{
+    font-size: 15px;
+    margin: 10px 0 10px;
+    text-align: center;
+}
+
+.main-title p{
+    font-size: 10px;
+    margin: 0;
+    text-align: center;
+    line-height: 20px;
+}
+
+.content-title h1{
+    font-size: 30px;
+    letter-spacing: 10px;
+}
+
+.content-title h1:before{
+    display: none;
+}
+
+.content-title h2{
+    font-size: 15px;
+    margin: 10px 0 10px;
+}
+
+}
+/* ------------------------430px------------------- */
+@media (width <= 430px){
+
+.main-extra ul {
+    gap: 20px;
+}
+
+.main-extra img{
+    opacity: 1;
 }
 
 
