新增 RWD選單進出場

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,7 +129,7 @@ img{
     word-spacing: 5px;
 }
 
-.main-content ul{}
+/* .main-content ul{} */
 
 .main-content ul li{
     margin-bottom: 30px;
