--- a/CSS/beetle-shop.css
+++ b/CSS/beetle-shop.css
@@ -25,9 +25,12 @@ a{
 .search{
     display: flex;
     justify-content: flex-end;
+
+    margin:0 110px 20px 0;
 }
 
-button{
+/* 包括filter button */
+button{    
     background: none;
     border: none;
     padding: 0;
@@ -56,18 +59,20 @@ button{
 
 
 .search select{
-    margin: 0 80px 0 20px;
     background-color: #7F7C7C;
     color: #FFFF;
     text-align: center;
     border-radius: 10px;
     width: 130px;
+
+    margin-left: 10px;
 }
 
 .shell{
     display: flex;
     justify-content: flex-start;
-    margin-top: 25px;
+    margin: 25px 0 50px;
+    gap: 60px;
 }
 
 .l-list{
@@ -76,6 +81,7 @@ button{
     width: 130px;
     height: 340px;
     margin-left: 55px;
+    box-sizing: border-box;
 
     position: sticky;
     top: 220px;
@@ -124,9 +130,8 @@ button{
 /* 主要產品名錄*/
 
 .main-product{
-   padding-left: 100px;
+   /* padding-left: 60px; */
    width: 850px;
-   margin-bottom: 50px;
 }
 
 .main-product ul{
@@ -200,7 +205,7 @@ button{
 }
 
 /* 售完標籤 */
-.img-box::after{
+.main-product .img-box::after{
     content: "售完";
     font-weight: bold;
     font-size: 30px;
@@ -229,8 +234,7 @@ li:nth-of-type(5) .img-box::after{
 
 .main-product h3{
     text-align: center;
-    margin: 20px 0;
-    padding: 0 20px 0;
+    margin: 20px;
     line-height: 1.2;
 }
 
@@ -274,4 +278,238 @@ li:nth-of-type(5) .img-box::after{
     text-align: center;
 
     background-color: #949494;
+}
+
+/* ----------------------RWD預備------------------- */
+#filter{
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    margin: 40px auto;
+    font-weight: bold;
+
+    display: none;
+}
+
+#filter i{
+    color: white;
+}
+
+#filter:active{
+    color: #161d1b;
+}
+
+#filter:active i{
+    color: #161d1b;
+}
+
+.rwd-product{
+    display: none;
+}
+
+
+
+/* -----------------------1115px------------------ */
+@media (width <= 1115px) {
+
+.shell{
+    gap: 190px;
+}
+
+.top-item{
+    width: 250px;
+}
+
+.main-product li:first-child::before{
+    bottom: 260px;
+}
+
+.top-item h3{
+    margin-top: 85px;
+}
+
+}
+/* -----------------------820px------------------ */
+@media (width <= 820px) {
+
+.breadcrumb ol{   
+     justify-content: center;
+     font-size: 15px;
+}
+
+.search{
+    justify-content: center;
+    margin: 0 0 20px 0;
+}
+
+#filter{
+    display: flex;
+    justify-content: center;
+}
+
+.search input{
+    width: 150px;
+}
+
+.search select{
+    width: 180px;
+}
+
+.shell{
+    display: block;
+    width: 100%;    
+    /* position: relative; */
+}
+
+.l-list{
+    background: linear-gradient(to right, #98b0a7,#f5f8f6); 
+    height: auto;
+
+    margin: 0;
+    width: 100%;
+
+    position: absolute;
+    top: -100%;
+    left: 0;
+
+    text-align: center;
+    opacity: 0;
+
+    z-index: 9999;
+}
+
+.l-list.active{
+    opacity: 1;
+    top:0;
+    transition: .3s;
+}
+
+.l-list li{
+    border-color:#728f85;
+    height: 60px;
+}
+
+.l-list li:hover::before{
+    display: none;
+}
+
+.l-list h2{
+    display: none;
+}
+
+.l-list a{
+    color: #161d1b;
+    line-height: 60px;
+    width: 100%;
+    height: 100%;
+}
+
+.l-list a:hover{
+    font-weight: normal;
+    color: #2b3632;
+}
+
+.l-list a:active{
+    font-weight: bold;
+    color: #2b3632;
+    background-color: #455c54;
+}
+
+.main-product{
+    display: none;
+}
+
+.rwd-product{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+}
+
+.rwd-product li{
+    width: 45%; 
+    background-color: white;
+    border-radius: 10px;        
+
+    position: relative;
+}
+
+.rwd-product li:first-child:before, .rwd-product li:nth-child(4):before{
+    content: "河野血統";
+    writing-mode: vertical-lr ;
+    color: #161d1b;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(93, 124, 113,.3);
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 2.5%;
+    line-height: 25px;
+}
+
+.rwd-product li:nth-child(4):before{
+    content: "肝川  血統";
+}
+
+
+.rwd-link{
+    display: flex;    
+    color: #161d1b;   
+
+    width: 100%;   
+    height: 100%;
+}
+
+.rwd-box{
+    margin-left: 10%;
+    height: 100%;
+}
+
+.rwd-box img{
+    height: 100%;
+    width: 100%;
+}
+
+.rwd-link h3{
+    padding: 2%;
+    width: 50%;
+    line-height: 1.3;
+    display: flex;
+    align-items: center;
+}
+
+.rwd-link p{
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 2%;
+    font-size: 20px;
+    justify-content: center;
+    font-weight: bold;
+}
+
+
+
+}
+
+/* -----------------------700px------------------ */
+@media (width <= 700px) {
+
+.rwd-product li{
+    width: 90%;
+}
+
+.search input{
+    width: 130px;
+}
+.search #order{
+    width: 130px;   
+}
+
+
+
+
+
 }
