--- a/CSS/beetle-product.css
+++ b/CSS/beetle-product.css
@@ -313,7 +313,7 @@ button{
 
 .middle-shell h3{
     font-weight: bold;
-    margin: 0 0 20px 130px;
+    margin: 0 0 20px 10%;
 }
 
 .middle-shell ul{
@@ -353,12 +353,12 @@ button{
 
 .buttom-shell h3{    
     font-weight: bold;
-    margin: 0 0 20px 130px;
+    margin: 0 0 20px 10%;
 }
 
 .buttom-shell ul{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 40px; 
 
@@ -454,6 +454,10 @@ button{
 .shell-top{
     margin-bottom: 40px;
 }    
+
+.l-list{
+    font-size: 14px;
+}
 
 .hero-product{  
     display: block;
@@ -572,4 +576,82 @@ button{
     background-color: #455c54;
 }
 
+}
+
+/* -----------------------660px------------------ */
+@media (width <= 660px) {
+
+.middle-shell ul{
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: flex-start;
+}    
+
+.middle-shell li{
+    box-shadow: 0 0 10px #455c54;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.middle-shell a{
+    display: flex;
+    gap: 0px;
+}
+
+.middle-shell a:hover{
+    transform:none;
+}
+
+.middle-shell img{
+    border-radius: 10px 0 0 10px;
+}
+
+.middle-shell p{
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.buttom-shell ul{
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.buttom-shell li{
+    width: 100%;
+}
+
+.buttom-shell li:not(:last-child):before{
+    height: 0;
+    width: 175px;
+    left: 0;
+    right: 0;
+    top:auto;
+    bottom: -20px;
+}
+
+.buttom-shell a:hover::before{
+    display: none;
+}
+
+.about-buy{
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+    
+
+}
+
+/* -----------------------430px------------------ */
+@media (width <= 660px) {
+
+.buttom-shell p{
+    font-size: 10px;
+}
 }
